depend on  step 1

--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -22,6 +22,7 @@ jobs:
 
   run-windows-commands:
     runs-on: windows-latest
+    needs: ["run-shell-commands"]
     steps:
       - name: Directory powershell
         run: Get-Location
