--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -6,6 +6,23 @@ jobs:
   run-git-actions:
     runs-on: ubuntu-latest
     steps:
+      - name: list files
+        run:  |
+          pwd
+          ls -a 
+          echo $GITHUB_SHA
+          echo $GITHUB_REPOSITORY
+          echo $GITHUB_WORKSPACE
+          echo "${{github.token}}"
+
+      - name: checkout
+        uses: actions/checkout@v1    
+
+      - name: list files after checkout
+        run: |
+          pwd
+          ls -a  
+
       - name: Simple js Actions
         id: greet
         uses: actions/hello-world-javascript-action@v1
