--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,7 +1,9 @@
 name: Actions Workflow
 
 on:
-  push:
+  # push:
+  schedule:
+    - cron: "0/5 * * * *"
   pull_request:
     types: [closed,assigned,opened,reopened]  
 
