--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,9 +1,9 @@
 name: Actions Workflow
 
 on:
-  # push:
-  schedule:
-    - cron: "0/5 * * * *"
+  # # push:
+  # schedule:
+  #   - cron: "0/5 * * * *"
   pull_request:
     types: [closed,assigned,opened,reopened]  
 
