--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Payload value
-        run: echo "${{github.event.client_payload}}"
+        run: echo ${{github.event.client_payload}}
 
       - name: list files
         run:  |
