--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -2,8 +2,7 @@ name: Env Var
 
 on: push
 env: 
-      WF_EV: WF env variable
-
+      WF_EV: ${{secrets.WF_ENV}}
 jobs:
   env-variable:
     runs-on: ubuntu-latest
