--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -9,6 +9,26 @@ jobs:
     env: 
       JOB_EV: JOb env variable 
     steps:
+    - name: Push a random files
+      run: |
+        pwd
+        ls -a
+        git init
+        git remote add origin "https://$GITHUB_ACTOR:${{secrets.GITHUB_TOKEN}}@github.com/$GITHUB_REPOSITORY.git"
+        git config --global user.email "mybot@b.com"
+        git config --global user.name "mybot@b.com"
+        git fetch
+        git checkout master
+        git branch --set-upstream-to=origin/master
+        git pull
+        ls -a 
+        echo $RANDOM >> random.txt
+        ls -a
+        git add -A 
+        git commit -m "random"
+        git push 
+
+
     - name: log env variable 
       env: 
         STEP_EV: STEP env variable
