--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -4,6 +4,18 @@ on: push
 env: 
       WF_EV: ${{secrets.WF_ENV}}
 jobs:
+  decrypt:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Decrypt files
+        run:  gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" \ --output $HOME/secrets/mysecret.json mysecret.json.gpg 
+        env:
+          PASSPHRASE: $ {{ secrets.PASSPHRASE}}
+
+      - name: Print out file content
+        run: cat $HOME/secrets/mysecret.json    
+
   env-variable:
     runs-on: ubuntu-latest
     env: 
