--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -12,12 +12,12 @@ jobs:
         run: |
           ls -a  
           gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" \ 
-          --output $HOME/secrets/mysecret.json mysecret.json.gpg 
+          --output $HOME/mysecret.json mysecret.json.gpg 
         env:
           PASSPHRASE: ${{ secrets.PASSPHRASE}}
 
       - name: Print out file content
-        run: cat $HOME/secrets/mysecret.json    
+        run: cat $HOME/mysecret.json    
 
   env-variable:
     runs-on: ubuntu-latest
