--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -11,8 +11,7 @@ jobs:
       - name: Decrypt files
         run: |
           ls -a  
-          gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" \ 
-          --output $HOME/mysecret.json mysecret.json.gpg 
+          gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/mysecret.json mysecret.json.gpg 
         env:
           PASSPHRASE: ${{ secrets.PASSPHRASE}}
 
