--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -9,9 +9,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Decrypt files
-        run: |
-          ls -a  
-          gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/mysecret.json mysecret.json.gpg 
+        run: gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/mysecret.json mysecret.json.gpg 
         env:
           PASSPHRASE: ${{secrets.PASSPHRASE}}
 
