--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -4,19 +4,29 @@ on: push
 env: 
       WF_EV: ${{secrets.WF_ENV}}
 jobs:
-  decrypt:
+  # decrypt:
+  function:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: Decrypt files
-        run: |
-          gpg --version
-          gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/mysecret.json mysecret.json.gpg 
-        env:
-          PASSPHRASE: ${{secrets.PASSPHRASE}}
+    # steps:
+    #   - uses: actions/checkout@v1
+    #   - name: Decrypt files
+    #     run: |
+    #       gpg --version
+    #       gpg --quiet --batch --yes --decrypt --passphrase="$PASSPHRASE" --output $HOME/mysecret.json mysecret.json.gpg 
+    #     env:
+    #       PASSPHRASE: ${{secrets.PASSPHRASE}}
 
-      - name: Print out file content
-        run: cat $HOME/mysecret.json    
+    #   - name: Print out file content
+    #     run: cat $HOME/mysecret.json    
+    steps: 
+      - name: dumo
+        run: |
+          echo ${{contains('hello','ll')}}
+          echo ${{startswith('hello','he')}}
+          echo ${{endswith('hello','lo')}}
+          echo ${{format('hello {0} {1} {2}','world','!','!')}}
+
+      
 
   env-variable:
     runs-on: ubuntu-latest
