--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -30,6 +30,7 @@ jobs:
 
   env-variable:
     runs-on: ubuntu-latest
+    if: github.event_name == 'push'
     env: 
       JOB_EV: JOb env variable 
     steps:
