--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -4,14 +4,18 @@ on: push
 
 jobs:
   node-version:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest,windows-latest,macos-latest]
+        node_ver: [6,7,8]
+    runs-on: ${{matrix.os}}
     steps:
       - name: nodee --version
         run: node -v 
 
       - uses: actions/setup-node@v1 
         with:   
-          node-version: 6
+          node-version: ${{matrix.node_ver}}
 
       - name: nodee --version
         run: node -v 
