--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -1,6 +1,6 @@
 name: Martrix WF  
 
-on: push
+on: pull_request
 
 jobs:
   node-version:
@@ -11,7 +11,7 @@ jobs:
         include:
           - os: ubuntu-latest
             node_ver: 8
-            is_ubuntu_8: true
+            is_ubuntu_8: "true"
         exclude:
           - os: ubuntu-latest
             node_ver: 6
