--- a/.github/workflows/comtainer.yml
+++ b/.github/workflows/comtainer.yml
@@ -12,3 +12,18 @@ jobs:
         run: |
           node -v 
           cat /etc/os-release  
+
+      - name: step with docker 
+        uses: docker://node:12.14.1-alpine3.10
+        with:
+          entrypoint: "/bin/echo"
+          args: "hellow world"
+
+      - name: step with docker 2 
+        uses: docker://node:12.14.1-alpine3.10
+        with:
+          entrypoint: /usr/local/bin/node
+          args: -v
+              
+
+  
